DASH-663 Handle expiration domain before 30 days. Show warning icons on mobile items. UI Fixes.

--- a/client/src/pages/FioDomainManagePage/components/WatchListDomainsComponent/WatchListDomainsComponent.module.scss
+++ b/client/src/pages/FioDomainManagePage/components/WatchListDomainsComponent/WatchListDomainsComponent.module.scss
@@ -38,6 +38,12 @@
       .actionButtons {
         width: 100%;
         justify-content: center;
+
+        .button {
+          height: auto;
+          min-height: 36px;
+          padding: 5px 10px;
+        }
       }
     }
   }
